# rust-squash-sys

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.markdown  aliases.js  build.rs  create_bindings.sh  index.html  search-index.js  wrapper.h
ci/: install_squash.sh  script.sh
examples/: simple.rs  stream.rs
examples/common/: mod.rs
implementors/core/clone/: trait.Clone.js
squash_sys/: SQUASH_BAD_PARAM.v.html  SQUASH_BAD_VALUE.v.html  SQUASH_BUFFER_EMPTY.v.html  SQUASH_BUFFER_FULL.v.html  SQUASH_CODEC_INFO_AUTO_MASK.v.html  SQUASH_CODEC_INFO_CAN_FLUSH.v.html  SQUASH_CODEC_INFO_DECOMPRESS_UNSAFE.v.html  SQUASH_CODEC_INFO_KNOWS_UNCOMPRESSED_SIZE.v.html  SQUASH_CODEC_INFO_MASK.v.html  SQUASH_CODEC_INFO_NATIVE_STREAMING.v.html  SQUASH_CODEC_INFO_VALID.v.html  SQUASH_CODEC_INFO_WRAP_SIZE.v.html  SQUASH_END_OF_STREAM.v.html  SQUASH_FAILED.v.html  SQUASH_INVALID_BUFFER.v.html  SQUASH_INVALID_OPERATION.v.html  SQUASH_IO.v.html  SQUASH_LICENSE_APACHE.v.html  SQUASH_LICENSE_APACHE2.v.html  SQUASH_LICENSE_BSD2.v.html  SQUASH_LICENSE_BSD3.v.html  SQUASH_LICENSE_BSD4.v.html  SQUASH_LICENSE_CDDL.v.html  SQUASH_LICENSE_COPYLEFT_INCOMPATIBLE.v.html  SQUASH_LICENSE_FLAGS_MASK.v.html  SQUASH_LICENSE_GPL1.v.html  SQUASH_LICENSE_GPL1_PLUS.v.html  SQUASH_LICENSE_GPL2.v.html  SQUASH_LICENSE_GPL2_PLUS.v.html  SQUASH_LICENSE_GPL3.v.html  SQUASH_LICENSE_GPL3_PLUS.v.html  SQUASH_LICENSE_ISC.v.html  SQUASH_LICENSE_LGPL2P1.v.html  SQUASH_LICENSE_LGPL2P1_PLUS.v.html  SQUASH_LICENSE_LGPL3.v.html  SQUASH_LICENSE_LGPL3_PLUS.v.html  SQUASH_LICENSE_MIT.v.html  SQUASH_LICENSE_MPL.v.html  SQUASH_LICENSE_MSPL.v.html  SQUASH_LICENSE_OR_GREATER.v.html  (+426 more)
squash_sys/inner/: SQUASH_VERSION.v.html  SQUASH_VERSION_EXTRACT_MAJOR.v.html  SQUASH_VERSION_EXTRACT_REVISION.v.html  constant.SQUASH_VERSION_CURRENT.html  fn.SQUASH_VERSION.html  fn.SQUASH_VERSION_EXTRACT_MAJOR.html  fn.SQUASH_VERSION_EXTRACT_MINOR.html  fn.SQUASH_VERSION_EXTRACT_REVISION.html
src/: bindings.rs  codec.rs  context.rs  file.rs  lib.rs  license.rs  memory.rs  object.rs  option.rs  plugin.rs  splice.rs  status.rs  stream.rs  version.rs
src/squash_sys/: lib.rs.html
tests/: from_c.rs
tests/stream/: mod.rs
(+11 files in other folders)
