[package]
name = "squash-sys"
version = "1.0.2"
authors = ["Zachary Dremann <dremann@gmail.com>"]
description = "sys-level bindings to the squash compression library"
keywords = ["squash", "compress", "decompress", "uncompress"]
repository = "https://github.com/Dr-Emann/rust-squash-sys"
license = "MIT/Apache-2.0"
readme = "README.markdown"
edition = '2018'

links = "libsquash0.8"

[dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.4"
libc = "0.2"
lazy_static = "1.4"

[build-dependencies]
pkg-config = "0.3.16"

[features]
docs-rs = []

[package.metadata.docs.rs]
features = [ "docs-rs" ]
